# UI-Test-Automation

./: .dockerignore  .gitignore  Dockerfile  README.md  conftest.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
config/: settings.py
locators/: __init__.py  about_page_locators.py  contacts_page_locators.py  main_page_locators.py  portfolio_page_locators.py  services_page_locators.py
pages/: __init__.py  about_page.py  base_page.py  contacts_page.py  main_page.py  portfolio_page.py  services_page.py
tests/: test_main_page.py  test_navigation.py
utils/: __init__.py  allure_reporter.py  logger.py
